crossplane/01_Network/07_route.yaml
apiVersion: ec2.aws.crossplane.io/v1alpha1
kind: Route
metadata:
  labels:
    testing.upbound.io/example-name: route-us-east-1
  name: route-us-east-1
spec:
  forProvider:
    destinationCIDRBlock: 0.0.0.0/0
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        testing.upbound.io/example-name: routetable-us-east-1
    gatewayIdSelector:
      matchLabels:
        testing.upbound.io/example-name: internet-gateway-us-east-1
